app/assets/stylesheets/catarse_bootstrap/_extra.sass
// Resetting headers as webflow does not provide this in its normalize
h1, h2, h3, h4, h5, h6, label
  font-weight: normal

body
  word-wrap: break-word

.list-answer
  display: none

.required
  .field-label
    padding-top: 1px
    padding-bottom: 1px
    font-weight: 600

.project-reward-box-hover
  cursor: pointer

.nav-tab
  cursor: pointer

.tab-container
  > .tab-content
    padding: 1em

select.date
  float: left
  width: 100px
  margin-right: 5px
.deliver-at-date
  width: 230px

.loader
  img
    display: none

.card-reward
  .project-reward-box-hover
    opacity: 0
    +transition(opacity 650ms)
  &:hover .project-reward-box-hover
    z-index: 10
    opacity: 1
    +transition(opacity 650ms)
    .project-reward-box-hover-text
      +transform(translateY(-50%) scale(1))

.fb_comments_count_zero
  display: inline

// New contribution page
.text-field.back-reward-input-reward // fix text-field height conflict
  height: 70px

.back-reward-radio-reward
  cursor: pointer
  label
    cursor: pointer
  position: relative
  margin-bottom: 10px !important
  border: 1px solid #eee
  .badge-success
    display: none
  &.selected
    .badge-success
      display: inline
      position: absolute
      top: 10px
      right: 10px

  .radio_buttons,
  input[type=radio]
    height: auto
    display: inline-block
    float: none

    + label
      float: none
      display: inline-block
      line-height: 1

.total-card
  overflow: auto
  .back-reward-input-reward.placeholder
    width: 20%

  .contribution-text
    float: left
    width: 80%


.list-question
  cursor: pointer
  &.open
    font-weight: 600
    &:before
      font-family: "FontAwesome"
      display: inline-block
      content: "\f105 "
      +transition(all 1s ease)
      +rotate(90deg)

  &:before
    font-family: "FontAwesome"
    display: inline-block
    content: "\f105 "
    +transition(all 1s ease)

// Edit contribution page
.w-col
  .w-col
    &.w-sub-col
      padding-right: 20px
    &.w-sub-col-middle
      padding-right: 20px


@media (max-width: 767px)
  .w-col
    .w-col.w-sub-col
      padding-right: 0px

.text-field.checkbox-fix
  display: inline-block
  width: 24px
  height: 24px
  margin: 0

.text-error.w-hidden
  display: none

.hidden
  display: none

.text-color-for-status
  &.rejected, &.failed
    color: $red
  &.approved, &.online, &.successful
    color: $green
  &.waiting_funds
    color: #b8b651
.force-text-dark
  color: #3f4752 !important

.field_with_errors
  .text-field
    //margin-bottom: 5px
    border-color: #e86666
    background-color: rgba(232, 102, 102, 0.09)

// Links rendered by workable embed
.whr-title a
  color: #409bff
  text-decoration: none
  &:hover
    text-decoration: underline

// Hero images
.hero-jobs
  background-image: url('/assets/hero-jobs.jpg') !important
  background-position: 50% 50%
  background-size: cover
  color: white

.hero-back
  background-image: url('/assets/hero-home.jpg') !important
  background-position: 50% 50%
  background-size: cover
  color: white

.hero-guide
  background-image: url('/assets/hero-guide.jpg') !important
  background-position: 50% 50%
  background-size: cover
  color: white

.hero-search
  background-image: url('/assets/hero-explore.jpg') !important
  background-position: 50% 50%
  background-size: cover
  color: white

.hero-profile
  width: 100%
  height: 100%
  -webkit-filter: blur(15px)
  background-position: 50% 50%
  background-size: cover

.hero-image
  position: absolute
  z-index: 10
  opacity: 0.7
  top: 0
  left: 0
  right: 0
  bottom: 0
  background: no-repeat center center
  -webkit-background-size: cover
  background-size: cover
  overflow: hidden

  @media (max-width: 414px) and (orientation: portrait)
    height: 200px
    position: static
    opacity: 1



.hero-container
  background-color: #222
  overflow: hidden
  position: relative
  z-index: 1

  @media (min-width: 991px)
    height: 600px

  @media (max-width: 414px) and (orientation: portrait)
    background-color: #fff
    height: auto
    min-height: 490px
    border-bottom: 1px solid #ddd

  .hero-text
    position: relative
    top: 50%
    left: 50%
    transform: translate(-50%, -50%)
    z-index: 20
    color: #fff
    text-shadow: 0 0 30px rgba(0, 0, 0, 0.6), 0 1px 0 rgba(0, 0, 0, 0.7)
    letter-spacing: 1px
    width: 50%

    @media (max-width: 414px) and (orientation: portrait)
      color: #666
      text-shadow: 0 0
      width: 100%
      position: static
      transform: translate(0,0)
      padding: 1em 2em 0

  .hero-big-text
    letter-spacing: 2px

// Helpers

.fontsize-tiny
  font-size: 11px

.u-pos-rel
  position: relative

.u-pos-abs
  position: absolute

.u-pos-fix
  position: fixed

.u-text-uppercase
  text-transform: uppercase

// Sprites: Payment
@import "compass/utilities/sprites"
@import "sprites/payment/*.png"
$payment: sprite-map("sprites/payment/*.png")
+all-payment-sprites

.payment-logo-cc
  +sprite-dimensions($payment, cc-logos-small)

.payment-logo-paypal
  +sprite-dimensions($payment, paypal-logo-small)

.payment-logo-dwolla
  +sprite-dimensions($payment, dwolla-logo-small)

.payment-lock
  display: inline-block
  +sprite-dimensions($payment, icon-lock)

